fix: restore font and spacing in footer

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -171,6 +171,10 @@ header {
 		font-size: 0.8rem;
 	}
 
+	.zak-footer-col {
+		gap: 0;
+	}
+
 	// social media icons
 	section.widget_media_image {
 		display: inline-block;
@@ -195,8 +199,9 @@ header {
 	h3 {
 		color: white;
 		text-transform: uppercase;
-		font-size: 1rem;
+		font-size: 1.4rem;
 		font-weight: bold;
+		border-bottom: none;
 
 		@media screen and (max-width: 768px) {
 			margin-bottom: 0.5rem;
